--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -4,18 +4,30 @@
       <th></th>
       <th>Title</th>
       <th>Opinion</th>
-      <th colspan="3"></th>
+      <th>いいね数</th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
     <% books.each do |book| %>
       <tr>
-        <td><%= link_to(book.user) do %>
-          <%= image_tag book.user.get_profile_image, size:'50x50' %>
+        <td>
+          <%= link_to(book.user) do %>
+            <%= image_tag book.user.get_profile_image, size:'50x50' %>
           <% end %>
         </td>
-        <td><%= link_to book.title,book %></td>
+        <td><%= link_to book.title, book %></td>
         <td><%= book.body %></td>
+        <td><%= book.favorites.count %></td>
+        <td>
+          <% if user_signed_in? %>
+            <% if book.favorited_by?(current_user) %>
+              <%= button_to 'いいねを外す', book_favorite_path(book), method: :delete %>
+            <% else %>
+              <%= button_to 'いいね', book_favorite_path(book), method: :post %>
+            <% end %>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
