--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+
+ .heart-form {
+  display: inline;
+}
+.heart-button {
+  background: none;
+  border: none;
+  padding: 0;
+  font-size: 1.5rem;
+  color: red;
+  cursor: pointer;
+}
