--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,14 +1,39 @@
-<div class='container px-5 px-sm-0'>
+<%= render partial: "index", locals: { books: @books } %>
+<div class='container'>
   <div class='row'>
     <div class='col-md-3'>
       <h2>User info</h2>
       <%= render 'users/info', user: current_user %>
+
       <h2 class="mt-3">New book</h2>
-      <%= render 'form', book: @book %>
+      <%= render 'books/form', book: Book .new %>
     </div>
+
     <div class='col-md-8 offset-md-1'>
-      <h2>Books</h2>
-      <%= render 'index', books: @books%>
-    </div>
-  </div>
-</div>
+  		<h2>Book detail</h2>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @books.each do |book| %>
+            <tr>
+              <td>
+                <%= link_to(user_path(book.user)) do %>
+                  <%= image_tag book.user.get_profile_image, size: "50x50" %>
+                <% end %>
+              </td>
+              <td><%= link_to book.title, book %></td>
+              <td><%= book.body %></td>
+              <td><%= book.favorites.count %></td>
+              <td><%= book.book_comments.count %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
