--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,26 +3,84 @@
     <div class='col-md-3'>
       <h2>User info</h2>
       <%= render 'users/info', user: @book.user %>
+
       <h2 class="mt-3">New book</h2>
       <%= render 'books/form', book: Book .new %>
     </div>
+
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
+      <table class='table table-hover table-inverse'>
+        <thead>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @books.each do |book| %>
+            <tr>
+              <td>
+                <%= link_to(book.user) do %>
+                  <%= image_tag book.user.get_profile_image, size: '50x50' %>
+                <% end %>
+              </td>
+              <td><%= link_to book.title, book %></td>
+              <td><%= book.body %></td>
+              <td>
+                <% if user_signed_in? %>
+                  <% if book.favorited_by?(current_user) %>
+                  <%= button_to book_favorite_path(book), method: :post, class: 'heart-button', form_class: 'heart-form' do %>
+                  ♡
+                  <% end %>
+                <% else %>
+                  <%= button_to book_favorite_path(book), method: :post do %>
+                  <span class="heart-button">♡</span>
+                  <% end %>
+                <% end %>
+          <% end %>
+        </td>
+        <td>
+          <p>コメント数
+          <%= book.book_comments.count %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
   		<table class='table'>
-  		  <tr>
-          <td><%= link_to user_path(@book.user) do %>
-            <%= image_tag @book.user.get_profile_image, size:"100x100" %><br>
-            <%= @book.user.name %>
-            <% end %>
-          </td>
-          <td><%= link_to @book.title, @book %></td>
-          <td><%= @book.body %></td>
             <% if @book.user == current_user %>
               <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
               <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
             <% end %>
         </tr>
       </table>
+        <% @book.book_comments.each do |comment| %>
+          <div class="d-flex align-items-start mb-3">
+            <div class="me-3 text-center">
+              <%= image_tag comment.user.get_profile_image, size: '50x50' %>
+              <small class="d-block mt-1"><%= comment.user.name %></small>
+            </div>
+            <div class="flex-grow-1 d-flex p-2">
+              <div><%= comment.comment %></div>
+              <% if comment.user == current_user %>
+                <%= link_to "Destroy", book_book_comment_path(@book, comment),
+                  method: :delete,
+                 data: { confirm: "本当に削除しますか？" },
+                 class: "btn btn-danger btn-sm" %>
+              <% end %>
+            </div>
+          </div>
+        <% end %>
+
+        <%= form_with(model: [@book, BookComment.new], local: true) do |f| %>
+          <%= f.text_area :comment, placeholder: "コメントを入力", rows: 5, cols: 60 %>
+          <%= f.submit "投稿" %>
+        <% end %>
     </div>
   </div>
 </div>
