--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,7 +10,38 @@
 
     <div class='col-md-8 offset-md-1'>
     <h2>Users</h2>
-    <%= render 'index',users: @users %>
+    <table class='table'>
+  <thead>
+    <tr>
+      <th>image</th>
+      <th>name</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @users.each do |user| %>
+      <tr>
+        <td><%= image_tag user.get_profile_image, size: '50x50' %></td>
+        <td><%= user.name %></td>
+        <td>フォロー数: <%= user.followings.count %></td> <!-- フォロー数 -->
+        <td>フォロワー数: <%= user.followers.count %></td>  <!-- フォロワー数 -->
+        <td>
+        <% unless current_user == user %>
+          <% if current_user.following?(user) %>
+            <% relationship = current_user.relationships.find_by(followed_id: user.id) %>
+            <% if relationship %>
+              <%= button_to 'フォロー外す', relationship_path(relationship), method: :delete, class: "btn btn-link btn-sm" %>
+            <% end %>
+          <% else %>
+            <%= button_to 'フォローする', relationships_path(user_id: user.id), method: :post, class: "btn btn-link p-0" %>
+            <% end %>
+          <% end %>
+        </td>
+        <td><%= link_to 'Show', user %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
     </div>
   </div>
 </div>
