--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -31,7 +31,7 @@
               </td>
               <td><%= link_to book.title, book %></td>
               <td><%= book.body %></td>
-              <td><%= book.favorites.count %></td>
+              <td><%= render "favorites/btn", book: book %></td>
               <td><%= book.book_comments.count %></td>
             </tr>
           <% end %>
