--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,6 +8,14 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  <tr>
+    <th>follows</th>
+      <td><%= link_to user.followings.count, followings_user_path(user) %></td>
+  </tr>
+  <tr>
+    <th>followers</th>
+      <td><%= link_to user.followers.count, followers_user_path(user) %></td>
+  </tr>
 </table>
 
 <div class='row'>
