--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,30 @@
   <div class='row'>
     <div class='col-md-3'>
       <h2>User info</h2>
-      <%= render 'info', user: @user %>
+      <div class="mt-2">
+      <table class='table'>
+      <tr>
+        <td colspan="2"><%= image_tag @user.get_profile_image, size:'100x100' %></td>
+      </tr>
+      <tr>
+        <th>name</th>
+        <th><%= @user.name %></th>
+      </tr>
+      <tr>
+        <th>introduction</th>
+        <td><%= @user.introduction %></td>
+      </tr>
+      <tr>
+        <th>follows</th>
+        <td><%= link_to @user.followings.count, followings_user_path(@user) %></td>
+      </tr>
+      <tr>
+        <th>followers</th>
+        <td><%= link_to @user.followers.count, followers_user_path(@user) %></td>
+      </tr>
+    </table>
+        <%= render 'relationships/follow_button', user: @user %>
+      </div>
       <h2 class="mt-3">New book</h2>
       <%= render 'books/form', book: @book %>
     </div>
