--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -54,4 +54,15 @@
       </div>
     </div>
   </nav>
+
+  <% if user_signed_in? %>
+  <div class="search-form" style="text-align: center; margin: 10px 0;">
+    <%= form_with url: search_path, method: :get, local: true do %>
+      <%= select_tag :model, options_for_select([['User', 'user'], ['Book', 'book']]) %>
+      <%= select_tag :method, options_for_select([['完全一致', 'perfect'],  ['前方一致', 'forward'], ['後方一致', 'backward'],['部分一致', 'partial']]) %>
+      <%= text_field_tag :content, nil, placeholder: "検索ワード" %>
+      <%= submit_tag "検索" %>
+    <% end %>
+  </div>
+<% end %>
 </header>
