課題6いいねまで

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,5 @@
 <%= render partial: "index", locals: { books: @books } %>
-<div class='container'>
+<div id="books_list" class='container'>
   <div class='row'>
     <div class='col-md-3'>
       <h2>User info</h2>
