--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -30,27 +30,15 @@
               </td>
               <td><%= link_to book.title, book %></td>
               <td><%= book.body %></td>
+              <td><%= render "favorites/btn", book: book %></td>
               <td>
-                <% if user_signed_in? %>
-                  <% if book.favorited_by?(current_user) %>
-                  <%= button_to book_favorite_path(book), method: :post, class: 'heart-button', form_class: 'heart-form' do %>
-                  ♡
-                  <% end %>
-                <% else %>
-                  <%= button_to book_favorite_path(book), method: :post do %>
-                  <span class="heart-button">♡</span>
-                  <% end %>
-                <% end %>
+                <p>コメント数
+                <%= book.book_comments.count %>
+              </td>
+            </tr>
           <% end %>
-        </td>
-        <td>
-          <p>コメント数
-          <%= book.book_comments.count %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        </tbody>
+      </table>
 
   		<table class='table'>
             <% if @book.user == current_user %>
