--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,9 +29,34 @@
       <h2 class="mt-3">New book</h2>
       <%= render 'books/form', book: @book %>
     </div>
+
     <div class='col-md-8 offset-md-1'>
-      <h2>Books</h2>
-      <%= render 'books/index',books: @books %>
-    </div>
+  		<h2>Books</h2>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @books.each do |book| %>
+            <tr>
+              <td>
+                <%= link_to(user_path(book.user)) do %>
+                  <%= image_tag book.user.get_profile_image, size: "50x50" %>
+                <% end %>
+              </td>
+              <td><%= link_to book.title, book %></td>
+              <td><%= book.body %></td>
+              <td><%= render "favorites/btn", book: book %></td>
+              <td><%= book.book_comments.count %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
   </div>
 </div>
