課題6コメント

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -57,6 +57,10 @@
             </tr>
           <% end %>
         </tbody>
+        
+        <div id="comment-list">
+          <%= render 'book_comments/comments', book: @book %>
+        </div>
       </table>
   </div>
 </div>
