--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,6 +18,8 @@
             <th>Opinion</th>
             <th></th>
             <th></th>
+            <th></th>
+            <th></th>
           </tr>
         </thead>
         <tbody>
@@ -28,47 +30,29 @@
                   <%= image_tag book.user.get_profile_image, size: '50x50' %>
                 <% end %>
               </td>
-              <td><%= link_to book.title, book %></td>
+              <t%= link_to book.title, book %></td>
               <td><%= book.body %></td>
               <td><%= render "favorites/btn", book: book %></td>
               <td>
                 <p>コメント数
                 <%= book.book_comments.count %>
               </td>
+                <% if @book.user == current_user %>
+                  <td>
+                    <%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %>
+                    <%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%>
+                  </td>
+                <% else %>
+                  <td></td>
+                <% end %>
             </tr>
           <% end %>
         </tbody>
       </table>
-
-  		<table class='table'>
-            <% if @book.user == current_user %>
-              <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
-              <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
-            <% end %>
-        </tr>
-      </table>
-        <% @book.book_comments.each do |comment| %>
-          <div class="d-flex align-items-start mb-3">
-            <div class="me-3 text-center">
-              <%= image_tag comment.user.get_profile_image, size: '50x50' %>
-              <small class="d-block mt-1"><%= comment.user.name %></small>
-            </div>
-            <div class="flex-grow-1 d-flex p-2">
-              <div><%= comment.comment %></div>
-              <% if comment.user == current_user %>
-                <%= link_to "Destroy", book_book_comment_path(@book, comment),
-                  method: :delete,
-                 data: { confirm: "本当に削除しますか？" },
-                 class: "btn btn-danger btn-sm" %>
-              <% end %>
-            </div>
-          </div>
-        <% end %>
-
-        <%= form_with(model: [@book, BookComment.new], local: true) do |f| %>
-          <%= f.text_area :comment, placeholder: "コメントを入力", rows: 5, cols: 60 %>
-          <%= f.submit "投稿" %>
-        <% end %>
+      <div id="comment-list">
+        <%= render 'book_comments/comments', book: @book %>
+      </div>
+      <%= render 'book_comments/form', book: @book %>
     </div>
   </div>
 </div>
