--- a/app/views/book_comments/create.js.erb
+++ b/app/views/book_comments/create.js.erb
@@ -1,2 +1,2 @@
 document.getElementById("comment-list").innerHTML = "<%= j render 'book_comments/comments', book: @book %>";
-document.querySelector("form textarea").value = "";
+$("#new_comment_form_<%= @book.id %>")[0].reset();
