--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -30,17 +30,19 @@
                   <%= image_tag book.user.get_profile_image, size: '50x50' %>
                 <% end %>
               </td>
-              <t%= link_to book.title, book %></td>
+              <td><%= link_to book.title, book %></td>
               <td><%= book.body %></td>
               <td><%= render "favorites/btn", book: book %></td>
               <td>
-                <p>コメント数
+                <p>コメント数</p>
                 <%= book.book_comments.count %>
               </td>
-                <% if @book.user == current_user %>
+                <% if book.user == current_user.id %>
                   <td>
-                    <%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %>
-                    <%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%>
+                    <div class="d-flex gap-2">
+                      <%= link_to 'Edit', edit_book_path(book), class: "btn btn-sm btn-success" %>
+                      <%= link_to 'Destroy', book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%>
+                    </div>
                   </td>
                 <% else %>
                   <td></td>
